--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ serde_json = "1"
 [target.'cfg(engine)'.dependencies]
 tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
 perseus-axum = { version = "=0.4.2", features = [ "dflt-server" ] }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 
 [target.'cfg(client)'.dependencies]
